# SandBoxHookPlugin

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/swift/hookdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/armeabi-v7a/: libsandhook
app/src/main/cpp/: Inject.cpp  Inject.h  native-lib.cpp  native-lib.h  sotool.h
app/src/main/java/com/swift/hookdemo/: ActivityHooker.java  HookStub.java  MainActivity.java  ProcessUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/swift/hookdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
